--- a/force-app/main/default/aura/SitesSearchItem/SitesSearchItem.cmp
+++ b/force-app/main/default/aura/SitesSearchItem/SitesSearchItem.cmp
@@ -37,16 +37,17 @@
             <div class="slds-col slds-size--1-of-1 slds-medium-size--2-of-3">
 <!--                <aura:if isTrue="{!!empty(v.studySiteWrapper.formatedDistance)}">-->
                     <div class="ssi-address">
-                    {!(!empty(v.studySiteWrapper.site.Principal_Investigator__r.Account.BillingAddress))?v.studySiteWrapper.site.Principal_Investigator__r.Account.BillingStreet:
+                    {!(!empty(v.studySiteWrapper.site.Site__r.BillingAddress))?v.studySiteWrapper.site.Site__r.BillingStreet:
                             v.studySiteWrapper.site.Site__r.BillingStreet}
                         <br/>
-                            {!(!empty(v.studySiteWrapper.site.Principal_Investigator__r.Account.BillingAddress))?
+                        {!(if(!empty(v.studySiteWrapper.site.Site__r.BillingCity),v.studySiteWrapper.site.Site__r.BillingCity+',','') + if(!empty(v.studySiteWrapper.site.Site__r.BillingState),' ' + v.studySiteWrapper.site.Site__r.BillingState+',','') + if(!empty(v.studySiteWrapper.site.Site__r.BillingPostalCode),' ' + v.studySiteWrapper.site.Site__r.BillingPostalCode,''))}
+                           <!-- {!(!empty(v.studySiteWrapper.site.Principal_Investigator__r.Account.BillingAddress))?
                                 (if(!empty(v.studySiteWrapper.site.Principal_Investigator__r.Account.BillingCity),v.studySiteWrapper.site.Principal_Investigator__r.Account.BillingCity+ ', ','')
                                  + if(!empty(v.studySiteWrapper.site.Principal_Investigator__r.Account.BillingStateCode),v.studySiteWrapper.site.Principal_Investigator__r.Account.BillingStateCode+ ', ','')
                                  + if(!empty(v.studySiteWrapper.site.Principal_Investigator__r.Account.BillingPostalCode),v.studySiteWrapper.site.Principal_Investigator__r.Account.BillingPostalCode,'')):
                                 (if(!empty(v.studySiteWrapper.site.Site__r.BillingCity),v.studySiteWrapper.site.Site__r.BillingCity+ ', ','')
                                 + if(!empty(v.studySiteWrapper.site.Site__r.BillingStateCode),v.studySiteWrapper.site.Site__r.BillingStateCode+ ', ','')
-                                + if(!empty(v.studySiteWrapper.site.Site__r.BillingPostalCode),v.studySiteWrapper.site.Site__r.BillingPostalCode,''))}
+                                + if(!empty(v.studySiteWrapper.site.Site__r.BillingPostalCode),v.studySiteWrapper.site.Site__r.BillingPostalCode,''))}-->
                     </div>
 <!--                </aura:if>-->
             </div>
