--- a/force-app/main/default/layouts/Reminder_Schedule__c-Reminder Schedule Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Reminder_Schedule__c-Reminder Schedule Layout.layout-meta.xml
@@ -11,12 +11,16 @@
                 <field>Name</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Required</behavior>
                 <field>First_Reminder_day__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>Use_Final_Template__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>Days_reminds__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
