--- a/force-app/main/default/layouts/Clinical_Trial_Profile__c-Clinical Trial Profile Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Clinical_Trial_Profile__c-Clinical Trial Profile Layout.layout-meta.xml
@@ -23,6 +23,10 @@
                 <behavior>Edit</behavior>
                 <field>Shareback_Settings_On_Participant_Level__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Shareback_Settings_on_StudySites__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -538,6 +542,13 @@
         <relatedList>Study_Site__c.Clinical_Trial_Profile__c</relatedList>
     </relatedLists>
     <relatedLists>
+        <fields>Survey.NAME</fields>
+        <fields>RECORDTYPE</fields>
+        <fields>Whose_response_needed__c</fields>
+        <fields>Is_Midpoint__c</fields>
+        <relatedList>Trial_Survey__c.Clinical_Trial_Profile__c</relatedList>
+    </relatedLists>
+    <relatedLists>
         <fields>NAME</fields>
         <fields>HCP_Contact__c</fields>
         <fields>Status__c</fields>
@@ -564,12 +575,6 @@
     </relatedLists>
     <relatedLists>
         <fields>NAME</fields>
-        <fields>RECORDTYPE</fields>
-        <fields>Whose_response_needed__c</fields>
-        <relatedList>Trial_Survey__c.Clinical_Trial_Profile__c</relatedList>
-    </relatedLists>
-    <relatedLists>
-        <fields>NAME</fields>
         <relatedList>Visit_Result_Type_Sharing__c.Clinical_Trial_Profile__c</relatedList>
     </relatedLists>
     <showEmailCheckbox>false</showEmailCheckbox>
@@ -578,7 +583,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h0E000001Hazb</masterLabel>
+        <masterLabel>00h1j000000XLeP</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
