Fixed REF-342, ALM 1117, ALM 1131

--- a/force-app/main/default/aura/Referring/Referring.cmp
+++ b/force-app/main/default/aura/Referring/Referring.cmp
@@ -229,19 +229,24 @@
                                         <div class="slds-col slds-size--1-of-1 slds-medium-size--1-of-3">
                                             <aura:if isTrue="{!!empty(ss.formatedDistance)}">
                                                 <div class="ssi-address">
-                                                    <!--{!(!empty(ss.site.Principal_Investigator__r.Account.BillingAddress))?ss.site.Principal_Investigator__r.Account.BillingStreet:
-                                                    ss.site.Site__r.BillingStreet}-->
-                                                    {!ss.site.Site__r.BillingStreet}
+                                                    {!(!empty(ss.site.Site__r.BillingAddress))?ss.site.Site__r.BillingStreet : ss.site.Principal_Investigator__r.Account.BillingStreet}
                                                     <br/>
-                                                    <!--{!(!empty(ss.site.Principal_Investigator__r.Account.BillingAddress))?ss.site.Principal_Investigator__r.Account.BillingCity:
-                                                    ss.site.Site__r.BillingCity},-->
+                                                    {!(!empty(ss.site.Site__r.BillingAddress))? ss.site.Site__r.BillingCity? ss.site.Site__r.BillingCity : '' : ss.site.Principal_Investigator__r.Account.BillingCity? ss.site.Principal_Investigator__r.Account.BillingCity : ''}
+                                                    {!(!empty(ss.site.Site__r.BillingAddress))? ss.site.Site__r.BillingStateCode? ', '+ss.site.Site__r.BillingStateCode : '' : ss.site.Principal_Investigator__r.Account.BillingStateCode? ', ' +  ss.site.Principal_Investigator__r.Account.BillingStateCode : ''}
+                                                    {!(!empty(ss.site.Site__r.BillingAddress))? ss.site.Site__r.BillingPostalCode? ', '+ss.site.Site__r.BillingPostalCode : '' : ss.site.Principal_Investigator__r.Account.BillingPostalCode? ', ' +  ss.site.Principal_Investigator__r.Account.BillingPostalCode : ''}
+                                                           <!-- ss.site.Site__r.BillingStateCode ? ',' + ss.site.Site__r.BillingStateCode : '' +
+                                                            ss.site.Site__r.BillingPostalCode ? ',' + ss.site.Site__r.BillingPostalCode : '') :
+                                                            (ss.site.Principal_Investigator__r.Account.BillingCity? ',' +  ss.site.Principal_Investigator__r.Account.BillingCity : '' +
+                                                            ss.site.Principal_Investigator__r.Account.BillingStateCode ? ',' + ss.site.Principal_Investigator__r.Account.BillingStateCode : '' +
+                                                            ss.site.Principal_Investigator__r.Account.BillingPostalCode ? ',' + ss.site.Principal_Investigator__r.Account.BillingPostalCode : '')}-->
+                                                    <!--ss.site.Site__r.BillingCity},&ndash;&gt;
                                                     {!ss.site.Site__r.BillingCity},
-                                                    <!--{!(!empty(ss.site.Principal_Investigator__r.Account.BillingAddress))?ss.site.Principal_Investigator__r.Account.BillingStateCode:
-                                                    ss.site.Site__r.BillingStateCode},-->
+                                                    &lt;!&ndash;{!(!empty(ss.site.Principal_Investigator__r.Account.BillingAddress))?ss.site.Principal_Investigator__r.Account.BillingStateCode:
+                                                    ss.site.Site__r.BillingStateCode},&ndash;&gt;
                                                     {!ss.site.Site__r.BillingStateCode},
-                                                    <!--{!(!empty(ss.site.Principal_Investigator__r.Account.BillingAddress))?ss.site.Principal_Investigator__r.Account.BillingPostalCode:
-                                                    ss.site.Site__r.BillingPostalCode}-->
-                                                    {!ss.site.Site__r.BillingPostalCode}
+                                                    &lt;!&ndash;{!(!empty(ss.site.Principal_Investigator__r.Account.BillingAddress))?ss.site.Principal_Investigator__r.Account.BillingPostalCode:
+                                                    ss.site.Site__r.BillingPostalCode}&ndash;&gt;
+                                                    {!ss.site.Site__r.BillingPostalCode}-->
                                                 </div>
                                             </aura:if>
                                         </div>
